--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+grub2 (2.02~beta2-36ubuntu3.16bb1) xenial; urgency=medium
+
+  * Balabit patched version
+
+ -- Balabit Platform Team <devnull@dev.null>  Thu, 15 Feb 2018 09:57:37 +0000
+
 grub2 (2.02~beta2-36ubuntu3.16) xenial; urgency=medium
 
   [ dann frazier ]
